# UbicompLab-APM-Monitoring-System

./: .gitignore  README.md
apps/api/: .env.example  .gitignore  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/routes/: health.py  incident.py  log.py
apps/api/app/services/: events.py  state.py
apps/apm-web/: package-lock.json  package.json
